# flint

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  package-lock.json  package.json  webpack.config.js
cmake/: EmscriptenHelpers.cmake  ExternalGitProject.cmake  Folders.cmake
examples/: CMakeLists.txt
examples/windowDemo/: main.cpp
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  template.ejs  utils.js
src/examples/noiseDemo/: main.cpp  main.js
src/examples/terrainDemo/: cpu.cpp  cpu.js  gpu.cpp  gpu.js  main.cpp  main.js
src/examples/windowDemo/: main.cpp  main.js  windowDemo.js
src/examples/workers/: CMakeLists.txt
src/examples/workers/createGeometry/: module.cpp  module.h
src/examples/workers/testWorker/: module.cpp  module.h
src/flint/: CMakeLists.txt  System.cc  System.h
src/flint/core/: AxisAlignedBox.h  Camera.h  CullingVolume.h  FrameState.h  Iterator.h  Math.h  MultiGrid.h  Optional.h
src/flint/debug/: Commands.h  Debug.h  Print.h
src/flint/geometry/: FixedPolygon.h  Geometry.cc  Geometry.h  GeometryBuffer.h  Mesh.h  Polygon.h  Quad.h  Sphere.h  SphereBuffer.h  Triangle.h
src/flint/import/: ObjLoader.cc  ObjLoader.h
src/flint/intersection/: Bound.h  Intersect.h  Ray.h  RayGroup.h
src/flint/intersection/bvh/: Tree.h
src/flint/intersection/object/: Triangle.h
src/flint/rendering/: CommandAllocator.cc  CommandAllocator.h  CommandBlock.cc  CommandBlock.h  CommandIterator.cc  CommandIterator.h
src/flint/rendering/gl/: CommandBuffer.cc  CommandBuffer.h  Commands.h  Enums.h  Objects.h  SerialCounted.h
src/flint/sampling/: Box.h  Mesh.h  Random.h
src/flint/tileset/: TerrainTile.cc  TerrainTile.h  TerrainTileContent.cc  TerrainTileContent.h  TerrainTileset.cc  TerrainTileset.h  Tile.cc  Tile.h  TileContent.h  Tileset.cc  Tileset.h
src/flint_viewport/: CMakeLists.txt  CameraControls.h  GL.h  Renderer.cc  Renderer.h  Shader.cc  Shader.h  ShaderProgram.cc  ShaderProgram.h  Window.cc  Window.h
src/steel/: CMakeLists.txt
src/steel/geometry/: BoundingBoxGeometry.cc  BoundingBoxGeometry.h
src/steel/rendering/: CommandAllocator.cc  CommandAllocator.h  CommandBlock.cc  CommandBlock.h  CommandIterator.cc  CommandIterator.h
src/steel/rendering/gl/: CommandBuffer.cc  CommandBuffer.h  Commands.h  Enums.h  Objects.h  SerialCounted.h
src/steel/shader/: WireProgram.cc  WireProgram.h
src/steel/tileset/: TerrainTile.cc  TerrainTile.h  TerrainTileContent.cc  TerrainTileContent.h  TerrainTileset.cc  TerrainTileset.h  Tile.cc  Tile.h  TileContent.h  Tileset.cc  Tileset.h
src/test/: CMakeLists.txt
src/threading/: CMakeLists.txt  Worker.cc  Worker.h
src/workers/: CMakeLists.txt
src/workers/createGeometry/: module.cpp  module.h
src/workers/terrainGenerator/: module.cpp  module.h
test/: CMakeLists.txt
test/intersection/: AxisAlignedBox.cc
